force-app/main/default/objects/Calibration_Event__c/Calibration_Event__c.object-meta.xml
<CustomObject>
    <label>Calibration Event</label>
    <nameField>
        <displayFormat>CAL-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calibration Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>