force-app/main/default/objects/Calibration_Event__c/fields/Calibration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Notes__c</fullName>
    <label>Calibration Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>