force-app/main/default/objects/Calibration_Event__c/fields/Date_of_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Calibration__c</fullName>
    <label>Date of Calibration</label>
    <type>Date</type>
</CustomField>