force-app/main/default/objects/Calibration_Event__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <label>Performed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Tool Pros</fullName>
            </value>
            <value>
                <fullName>Precision Tool Calibration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>